base/policies/custom/network/clamav-default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: clamav
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: []
