base/policies/custom/network/network-policy-gatekeeper.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gatekeeper-network-policy
  namespace: gatekeeper-system
spec:
  podSelector:
    app.kubernetes.io/component: controller-manager
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: kube-apiserver
    ports:
    - protocol: TCP
      port: 8443
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system # Allow kube-system for probes
    - podSelector: {} # Allow probes from within the cluster
    ports:
    - protocol: TCP
      port: 9090 # Health check port
  - from:
    - namespaceSelector: {}
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8888 # Metrics port
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: kube-apiserver
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
